# octez-manager

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.ci  IMPLEMENTATION_NOTES.md  Makefile  README.md  SECURITY.md  UI_MOCKUP.md  dune-project  install.sh  octez-manager.opam
.github/workflows/: ci.yml  deploy-docs.yml
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/sources/iomux.0.4/: CHANGES.md  dune-project  iomux.opam
_opam/.opam-switch/sources/iomux.0.4/.github/workflows/: test.yml
_opam/.opam-switch/sources/iomux.0.4/lib/: iomux_stubs.c  util.ml
_opam/lib/: findlib.conf
completions/: TESTING.md  _octez-manager  dune  octez-manager
docs/: astro.config.mjs
scripts/: check-sync-io.sh
src/: base_dir_registry.ml  base_dir_registry.mli  capabilities.ml  common.ml  common.mli  directory_registry.ml  directory_registry.mli  dune  health_check.ml  health_check.mli  help_parser.ml  history_mode.ml  history_mode.mli  installer.ml  installer.mli  installer_types.ml  keys_reader.ml  keys_reader.mli  log_viewer.ml  log_viewer.mli  logging_mode.ml  logging_mode.mli  main.ml  manager_interfaces.ml  node_env.ml  node_env.mli  port_validation.ml  port_validation.mli  service.ml  service.mli  service_backend.ml  settings.ml  settings.mli  snapshots.ml  snapshots.mli  system_user.ml  system_user.mli  systemd.ml  systemd.mli  teztnets.ml  (+1 more)
src/ui/: background_runner.ml  baker_highwatermarks.ml  baker_highwatermarks.mli  binary_help_explorer.ml  context.ml  data.ml  (+28 more)
test/: tui_flow_tests.ml  unit_tests.ml
tools/: gen_completion.ml
(+7179 files in other folders)
